--- a/PROYECTO QUINTA ARMONIA/PROYECTO QUINTA ARMONIA.csproj
+++ b/PROYECTO QUINTA ARMONIA/PROYECTO QUINTA ARMONIA.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="MySql.Data" Version="9.1.0" />
+    <PackageReference Include="PDFsharp" Version="6.1.1" />
   </ItemGroup>
 
   <ItemGroup>
