--- a/PROYECTO QUINTA ARMONIA/PROYECTO QUINTA ARMONIA.csproj
+++ b/PROYECTO QUINTA ARMONIA/PROYECTO QUINTA ARMONIA.csproj
@@ -83,6 +83,7 @@
   <ItemGroup>
     <PackageReference Include="MySql.Data" Version="9.1.0" />
     <PackageReference Include="PDFsharp" Version="6.1.1" />
+    <PackageReference Include="QRCoder" Version="1.6.0" />
     <PackageReference Include="WinForms.DataVisualization" Version="1.9.2" />
   </ItemGroup>
 
